added recent reviews box

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -10345,7 +10345,7 @@ header {
   left: 0;
   width: 330px;
   height: 238px;
-  background-color: #1B1B1B;
+  background-color: #1b1b1b;
   content: attr(alt);
 }
 
@@ -10372,14 +10372,21 @@ div.carousel-caption {
 .images-group-close {
   float: right;
   color: lightgray;
-  position: relative;
-  top: 4px;
   border: 0;
   background: rgba(0, 0, 0, 0);
   padding-right: 0;
 }
 .images-group-close:hover {
   text-decoration: underline;
+}
+
+.recent-review-text {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  /* number of lines to show */
+  -webkit-box-orient: vertical;
 }
 
 .icon-tabler-star.filled-star {
