finished ads, started login and register modals

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -10323,6 +10323,24 @@ header {
     height: 280px;
   }
 }
+#loginPortal .modal-content, #registerPortal .modal-content {
+  background-color: rgba(0, 0, 0, 0.8);
+}
+
+.carousel-bottom-ad {
+  max-height: 75px;
+}
+
+#carousel-left-ad {
+  position: absolute;
+  z-index: 3;
+  bottom: 20px;
+  left: 15px;
+  width: 10vw;
+  max-width: 90px;
+  height: 40vh;
+}
+
 #top-ad {
   min-width: 390px;
 }
