--- a/static/css/style.scss
+++ b/static/css/style.scss
@@ -201,6 +201,9 @@ header {
     .modal-content{
       background-color: rgba(0, 0, 0, 0.80);
     }
+    input {
+        color: black;
+    }
 }
 
 // Ads
