finished modify users for admin, various fixes and comments

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -10323,10 +10323,10 @@ header {
     height: 280px;
   }
 }
-#loginPortal .modal-content, #registerPortal .modal-content {
+#loginPortal .modal-content, #registerPortal .modal-content, .modifyUserPortal .modal-content {
   background-color: rgba(0, 0, 0, 0.8);
 }
-#loginPortal input, #registerPortal input {
+#loginPortal input, #loginPortal input:focus, #registerPortal input, #registerPortal input:focus, .modifyUserPortal input, .modifyUserPortal input:focus {
   color: black;
 }
 
